white space products page solved

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -20,9 +20,7 @@
 	width: 296px !important;
 }
 
-.product-breadcrumbs{
-	width:100vw;
-}
+
 
 @media only screen and (max-width: 1279px) {
 	.footer-center {
